sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:13: error: not found: value i
      if (plusPetit(i-1,i)){
                    ^AlgCocktailSort1:13: error: not found: value i
      if (plusPetit(i-1,i)){
                        ^