sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var tri:Boolean=true
  while(tri){
		tri=false
    for (i<-0 to getNombreValeurs()-2){
      if (plusPetit(i+1,i)){
      	echange(i,i+1)
      	tri=true
      }
    }
    for (j<-getNombreValeurs()-1 to 1 by -1){
      if (plusPetit(i-1,i)){
      	echange(j-1,j)
      	tri=true
    }
    }
  }
}